--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "intl-messageformat": "10.7.16",
     "jspdf": "^4.0.0",
     "lucide-react": "^0.552.0",
-    "next": "15.3.1",
+    "next": "^15.3.3",
     "next-themes": "0.4.6",
     "qrcode": "^1.5.4",
     "react": "18.3.1",
